--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,8 @@ libs = ["lib"]
 remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
 ffi=true
 fs_permissions = [
-    { access = "read", path = "./img/" },
+    { access = "read", path = "./img/happy.svg" },
+    { access = "read", path = "./img/sad.svg" },
     { access = "read", path = "./broadcast" },
 ]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
